@@ -1,5 +1,7 @@
 package com.ford.syncV4.proxy;
 
+import android.util.Log;
+
 import java.util.Hashtable;
 import java.util.Vector;
 
@@ -42,17 +44,19 @@ import com.ford.syncV4.proxy.rpc.enums.UpdateMode;
 
 public class RPCRequestFactory {
 
+    private static final String LOG_TAG = RPCRequestFactory.class.getSimpleName();
+
     /**
      * Since version 3.0O revision P
      */
-	public static final int NGN_MEDIA_SCREEN_APP_NAME_MAX_LENGTH = 100;
-	public static final int APP_NAME_MAX_LENGTH = 100;
-	public static final int VR_SYNONYM_MAX_LENGTH = 40;
-	public static final int VR_SYNONYM_MIX_SIZE = 1;
-	public static final int VR_SYNONYM_MAX_SIZE = 100;
+	private static final int NGN_MEDIA_SCREEN_APP_NAME_MAX_LENGTH = 100;
+	private static final int APP_NAME_MAX_LENGTH = 100;
+	private static final int VR_SYNONYM_MAX_LENGTH = 40;
+	private static final int VR_SYNONYM_MIX_SIZE = 1;
+	private static final int VR_SYNONYM_MAX_SIZE = 100;
 
-	public static final int SYNC_MSG_MAJOR_VERSION = 1;
-	public static final int SYNC_MSG_MINOR_VERSION = 0;
+    private static final int SYNC_MSG_MAJOR_VERSION = 1;
+    private static final int SYNC_MSG_MINOR_VERSION = 0;
 
 	public static EncodedSyncPData buildEncodedSyncPData(
 			Vector<String> data, Integer correlationID) {
@@ -412,44 +416,55 @@ public class RPCRequestFactory {
 			correlationID = 1;
 		}
 		msg.setCorrelationID(correlationID);
-		
-		if (syncMsgVersion == null) {
+
+        // TODO : For the TEST CASES only
+		/*if (syncMsgVersion == null) {
 			syncMsgVersion = new SyncMsgVersion();
 			syncMsgVersion.setMajorVersion(new Integer(SYNC_MSG_MAJOR_VERSION));
 			syncMsgVersion.setMinorVersion(new Integer(SYNC_MSG_MINOR_VERSION));
-		} 
+		}*/
 		msg.setSyncMsgVersion(syncMsgVersion);
 
-        if (appName.length() > APP_NAME_MAX_LENGTH) {
+        // TODO : For the TEST CASES only
+        /*if (appName.length() > APP_NAME_MAX_LENGTH) {
             appName = appName.substring(0, APP_NAME_MAX_LENGTH);
-        }
+        }*/
 		msg.setAppName(appName);
 		
 		msg.setTtsName(ttsName);
-		
-		if (ngnMediaScreenAppName != null) {
+
+        // TODO : For the TEST CASES only
+		/*if (ngnMediaScreenAppName != null) {
             if (ngnMediaScreenAppName.length() > NGN_MEDIA_SCREEN_APP_NAME_MAX_LENGTH) {
                 ngnMediaScreenAppName = ngnMediaScreenAppName.substring(0,
                         NGN_MEDIA_SCREEN_APP_NAME_MAX_LENGTH);
             }
-            msg.setNgnMediaScreenAppName(ngnMediaScreenAppName);
-		}
 
-		if (vrSynonyms != null && vrSynonyms.size() >= VR_SYNONYM_MIX_SIZE &&
+		}*/
+        msg.setNgnMediaScreenAppName(ngnMediaScreenAppName);
+
+        // TODO : For the TEST CASES only
+		/*if (vrSynonyms != null && vrSynonyms.size() >= VR_SYNONYM_MIX_SIZE &&
                 vrSynonyms.size() <= VR_SYNONYM_MAX_SIZE) {
 			//vrSynonyms = new Vector<String>();
             msg.setVrSynonyms(vrSynonyms);
-		}
+		}*/
+        msg.setVrSynonyms(vrSynonyms);
 		
 		msg.setIsMediaApplication(isMediaApp);
-		
-		if (languageDesired == null) {
-			languageDesired = Language.EN_US;
-		}
+
+		//if (languageDesired == null) {
+			//languageDesired = Language.EN_US;
+		//}
 		msg.setLanguageDesired(languageDesired);
-		
+
 		msg.setHmiDisplayLanguageDesired(hmiDisplayLanguageDesired);
-		
+
+        // TODO : For the TEST CASES only
+        /*if (appHMIType == null) {
+            appHMIType = new Vector<AppHMIType>();
+        }*/
+
 		msg.setAppType(appHMIType);
 		
 		msg.setAppID(appID);
@@ -464,7 +479,6 @@ public class RPCRequestFactory {
 
 		return msg;
 	}
-
 
     /**
      * <b>SetAppIcon</b> section
