@@ -26,9 +26,13 @@ public enum Language {
     PT_BR("PT-BR"),
     CS_CZ("CS-CZ"),
     DA_DK("DA-DK"),
-    NO_NO("NO-NO");
+    NO_NO("NO-NO"),
 
-    String internalName;
+    // TODO :  For the TEST CASES only
+    NOT_VALID("AA-AA"),
+    EMPTY("");
+
+    private String internalName;
     
     private Language(String internalName) {
         this.internalName = internalName;
