@@ -1,5 +1,7 @@
 package com.ford.syncV4.android.marshaller;
 
+import android.util.Log;
+
 import com.ford.syncV4.marshal.JsonRPCMarshaller;
 import com.ford.syncV4.proxy.RPCMessage;
 
@@ -14,8 +16,10 @@ public class InvalidJsonRPCMarshaller extends JsonRPCMarshaller {
 	@Override
 	public byte[] marshall(RPCMessage msg, byte version) {
 		byte[] msgBytes = super.marshall(msg, version);
-		
+
+        Log.d(TAG, "InvalidMarshaller " + msgBytes);
 		if (msgBytes != null) {
+            Log.d(TAG, "InvalidMarshaller in action, " + msgBytes.length);
 			final int newLength = msgBytes.length - 1;
 			byte[] bytes = new byte[newLength];
 			System.arraycopy(msgBytes, 0, bytes, 0, newLength);
