@@ -1,4 +1,5 @@
 [CW13]
+* SyncProxyTester | SyncProxyAndroid SDK: In case of RegisterAppInterface command allow to send parameters which are out of API specification
 + SyncProxyTester: Add DeviceInfo object into request command
 * SyncProxyTester: RegisterAppInterface without HashId in case of UnregisterAppInterface have take place
 + SyncProxyTester | SyncProxyAndroid SDK: Add possibility do not close USB connection when perform single UnregisterAppInterface command
